--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults and supports es6-module",
+    "not IE 11",
+    "not dead"
+  ]
 }
